# transform_lite

./: CMakeLists.txt  CMakeLists.txt.in  main.cc  transform_lite.h
constexprstring/: CMakeLists.txt
constexprstring/include/constexprstring/: constexpr_string.h
constexprutil/: CMakeLists.txt
constexprutil/examples/: CMakeLists.txt  linear_algebra_example.cpp  trigonometry_examples.cpp
constexprutil/include/constexprutil/linearalgebra/: matrix.h
constexprutil/include/constexprutil/math/: trigonometry.h
constexprutil/tests/: CMakeLists.txt  matrix_tests.cpp  trigonometry_tests.cpp
examples/: CMakeLists.txt
examples/src/: main.cc
poena/: CMakeLists.txt
poena/examples/: CMakeLists.txt  poena_examples.cpp  poena_graph_examples.cpp
poena/include/poena/: poena.h
poena/include/poena/graph/: graph.h
transformlite/: CMakeLists.txt
transformlite/include/transformlite/: transform_lite.h
